# WEB-HW2

./: Dockerfile  bot.py  classa.py  note_classes.py  pyproject.toml  sort.py  src_classes.py  src_with_classes.py
